# Sudokuxsolver

./: CMakeLists.txt  README.md  main.c  solucoes.txt  tabuleiros
Fase2/: Check.c  Check.h  Hidden.c  Hidden.h  NakedPairs.c  NakedPairs.h  PointingPairs.c  PointingPairs.h  R12.c  R12.h  R13.c  R13.h  R14.c  R14.h  R9.c  R9.h  box_line_reduction.c  box_line_reduction.h  library.h
